; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonqueuestask_queue.c_task_get_cancelled.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonqueuestask_queue.c_task_get_cancelled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@running_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @task_get_cancelled(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* @running_lock, align 4
  %5 = call i32 @SLOCK_LOCK(i32 %4)
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* @running_lock, align 4
  %10 = call i32 @SLOCK_UNLOCK(i32 %9)
  %11 = load i32, i32* %3, align 4
  ret i32 %11
}

declare dso_local i32 @SLOCK_LOCK(i32) #1

declare dso_local i32 @SLOCK_UNLOCK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
